[gd_scene load_steps=4 format=2]

[ext_resource path="res://deathpit.gd" type="Script" id=1]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 59.4669, 41.4625 )

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 151.646, 10 )

[node name="deathpit" type="Node2D"]
position = Vector2( -0.794434, 98.112 )
script = ExtResource( 1 )

[node name="CameraSplit" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D2" type="CollisionShape2D" parent="CameraSplit"]
position = Vector2( 0.567871, -53.6136 )
shape = SubResource( 2 )

[node name="Area2DDeath2" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2DDeath2"]
shape = SubResource( 1 )
[connection signal="area_entered" from="CameraSplit" to="." method="_on_CameraSplit_area_entered"]
[connection signal="body_entered" from="CameraSplit" to="." method="_on_CameraSplit_body_entered"]
[connection signal="area_entered" from="Area2DDeath2" to="." method="_on_Area2DDeath2_area_entered"]
[connection signal="body_entered" from="Area2DDeath2" to="." method="_on_Area2DDeath2_body_entered"]
